Format the incubator