@@ -6,13 +6,13 @@
  * %%
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
- * 
+ *
  * 1. Redistributions of source code must retain the above copyright notice,
  *    this list of conditions and the following disclaimer.
  * 2. Redistributions in binary form must reproduce the above copyright notice,
  *    this list of conditions and the following disclaimer in the documentation
  *    and/or other materials provided with the distribution.
- * 
+ *
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -26,6 +26,7 @@
  * POSSIBILITY OF SUCH DAMAGE.
  * #L%
  */
+
 package org.scijava.ops.engine.impl;
 
 import java.util.List;
@@ -46,7 +47,9 @@ public class DependencyOpInstanceInfoTree extends InfoTree {
 
 	private final List<OpInstance<?>> dependencies;
 
-	public DependencyOpInstanceInfoTree(OpInfo info, List<OpInstance<?>> dependencies) {
+	public DependencyOpInstanceInfoTree(OpInfo info,
+		List<OpInstance<?>> dependencies)
+	{
 		super(info, treesFrom(dependencies));
 		this.dependencies = dependencies;
 	}
@@ -60,7 +63,8 @@ public class DependencyOpInstanceInfoTree extends InfoTree {
 	}
 
 	private static List<InfoTree> treesFrom(List<OpInstance<?>> dependencies) {
-		return dependencies.stream().map(OpInstance::infoTree).collect(Collectors.toList());
+		return dependencies.stream().map(OpInstance::infoTree).collect(Collectors
+			.toList());
 	}
 
 }
